# Reploom

./: .pre-commit-config.yaml  ANALYTICS_FEATURE.md  API_CONNECTION_ANALYSIS.md  DEMO.md  DEMO_SCRIPT.md  KB_DEMO.md  KB_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  REPLOOM_CREW_DESIGN.md  ROADMAP_ISSUES.md  SAFETY.md  analytics-sample-response.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md  feature_request.md
backend/: .env.example  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  pytest.ini  seed_demo.py
backend/app/: main.py
backend/app/agents/: reploom_crew.py
backend/app/api/: api_router.py
backend/app/api/routes/: analytics.py  calendar.py  gmail.py  kb.py  outlook.py  reploom.py  workspace_settings.py
backend/app/auth/: token_exchange.py
backend/app/core/: config.py  db.py  tracing.py  workspace.py
backend/app/integrations/: calendar_service.py  gmail_service.py  outlook_service.py
backend/app/kb/: __init__.py  chunker.py  client.py  embeddings.py  models.py  retrieval.py
backend/app/models/: draft_reviews.py  gmail_drafts.py  models.py  outlook_drafts.py  workspace_settings.py
backend/app/tests/: test_kb_chunker.py  test_kb_integration.py  test_policy_guard.py
backend/migrations/: add_workspace_settings_fields.sql
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_gmail_routes.py
backend/tests/unit/: test_analytics.py  test_calendar_service.py  test_gmail_service.py  test_outlook_service.py  test_reploom_crew.py  test_reploom_crew_stabilized.py  test_token_exchange.py
frontend/: .env.example  TESTING.md  package-lock.json  package.json
frontend/src/: global.css  main.tsx
frontend/src/components/: chat-message-bubble.tsx  chat-window.tsx  document-item-actions.tsx  document-upload-form.tsx  layout.tsx  memoize-markdown.tsx  navbar.tsx
public/images/: README.md
(+26 files in other folders)
